# SIWIR2_seminar

./: .gitignore  environment-min.yml  fem.py  plot.py  plot_mode0.plt  readme.md
dat/: plot.py
dat/deallii/: CMakeLists.txt  cylinder_eigen.cc  readme
deallii/: CMakeLists.txt  disk_eigen.cc  readme
deallii/dat/: plot.py
